# ChangeLog for sci-astronomy/scamp
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-astronomy/scamp/ChangeLog,v 1.7 2011/08/04 18:32:22 bicatali Exp $

  14 Jun 2013; Justin Lecher <jlec@gentoo.org> scamp-9999.ebuild, metadata.xml:
  Drop KEYWORDS of live ebuilds

*scamp-9999 (04 Jul 2012)

  04 Jul 2012; Sébastien Fabbro <bicatali@gentoo.org> scamp-1.7.0-r2.ebuild,
  +scamp-9999.ebuild:
  Live version, introduced prefix love

  15 Jun 2012; Sébastien Fabbro <bicatali@gentoo.org> scamp-1.7.0-r2.ebuild:
  Fixed patch name

*scamp-1.7.0-r2 (03 Jan 2012)

  03 Jan 2012; Sébastien Fabbro <bicatali@gentoo.org> -scamp-1.7.0-r1.ebuild,
  +scamp-1.7.0-r2.ebuild, +files/scamp-1.7.0-plplot599.patch:
  Added a patch for plplot-5.9.9, thanks Jan Kohnert, bug #396723

*scamp-1.7.0-r1 (28 Nov 2011)

  28 Nov 2011; Sébastien Fabbro <bicatali@gentoo.org> +scamp-1.7.0-r1.ebuild,
  +metadata.xml:
  Fixed for recent ATLAS. Switch to EAPI4

  04 Aug 2011; Sébastien Fabbro <bicatali@gentoo.org> metadata.xml:
  Switched herd to sci-astronomy

*scamp-1.7.0 (03 May 2010)

  03 May 2010; Sébastien Fabbro <bicatali@gentoo.org> -scamp-1.5.5.ebuild,
  +scamp-1.7.0.ebuild:
  Version bump

*scamp-1.6.2 (04 Nov 2009)

  04 Nov 2009; Sébastien Fabbro <bicatali@gentoo.org> -scamp-1.4.6.ebuild,
  +scamp-1.6.2.ebuild:
  Version bump

  28 Jul 2009; Sébastien Fabbro <bicatali@gentoo.org> scamp-1.5.5.ebuild:
  Updated license to CeCILL-2

*scamp-1.5.5 (28 Jul 2009)

  28 Jul 2009; Sébastien Fabbro <bicatali@gentoo.org> +scamp-1.5.5.ebuild,
  +files/scamp-1.5.5-autotools.patch:
  Version bumpp

  05 Mar 2009; Sébastien Fabbro <bicatali@gentoo.org>
  files/scamp-1.4.6-autotools.patch:
  More plplot patching

*scamp-1.4.6 (26 Feb 2009)

  26 Feb 2009; Sébastien Fabbro <bicatali@gentoo.org>
  +files/scamp-1.4.6-autotools.patch, +metadata.xml, +scamp-1.4.6.ebuild:
  Initial import to the main tree from the sci overlay. Also included