@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-  <herd>sci-astronomy</herd>
-  <longdescription lang="en">
+<herd>sci-astronomy</herd>
+<longdescription lang="en">
   SCAMP computes astrometric and photometric solutions from SExtractor catalogs
   and stores them in header files. These headers files can be read by SWarp to
   coadd images.
 </longdescription>
-  <use>
-    <flag name="plplot">Build with <pkg>sci-libs/plplot</pkg> to allow diagnostic plots during processing</flag>
-  </use>
+<use>
+  <flag name="plplot">Build with <pkg>sci-libs/plplot</pkg> to allow diagnostic plots during processing</flag>
+</use>
 </pkgmetadata>
