@@ -1,6 +1,10 @@
 # ChangeLog for sci-astronomy/scamp
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sci-astronomy/scamp/ChangeLog,v 1.7 2011/08/04 18:32:22 bicatali Exp $
+
+  27 Feb 2014; Sébastien Fabbro <bicatali@gentoo.org> metadata.xml,
+  scamp-1.7.0-r2.ebuild, scamp-9999.ebuild:
+  sci-astronomy/scamp: EAPI-5, autotools-utils, fixed plplot flag
 
   14 Jun 2013; Justin Lecher <jlec@gentoo.org> scamp-9999.ebuild, metadata.xml:
   Drop KEYWORDS of live ebuilds
@@ -90,4 +94,3 @@
 
   19 Sep 2006; Sebastien Fabbro <seb@ist.utl.pt> +scamp-1.2.11.ebuild:
   Initial import.
-
